--- a/.github/workflows/build.from.dev.branch.deploy.to.dev.yml
+++ b/.github/workflows/build.from.dev.branch.deploy.to.dev.yml
@@ -4,12 +4,12 @@ env:
   # 🖊️ EDIT your repository secrets to log into your OpenShift cluster and set up the context.
   # See https://github.com/redhat-actions/oc-login#readme for how to retrieve these values.
   # To get a permanent token, refer to https://github.com/redhat-actions/oc-login/wiki/Using-a-Service-Account-for-GitHub-Actions
-  OPENSHIFT_SERVER: ${{ secrets.OPENSHIFT_SERVER }}
+  OPENSHIFT_SERVER: ${{ vars.OPENSHIFT_SERVER }}
   OPENSHIFT_TOKEN: ${{ secrets.OPENSHIFT_TOKEN }}
-  OPENSHIFT_NAMESPACE: ${{ secrets.GRAD_NAMESPACE }}-dev
-  COMMON_NAMESPACE: ${{ secrets.COMMON_NAMESPACE }}
-  NAMESPACE: ${{ secrets.GRAD_NAMESPACE }}
-  BUSINESS_NAMESPACE: ${{ secrets.GRAD_BUSINESS_NAMESPACE }}
+  OPENSHIFT_NAMESPACE: ${{ vars.GRAD_NAMESPACE }}-dev
+  COMMON_NAMESPACE: ${{ vars.COMMON_NAMESPACE }}
+  NAMESPACE: ${{ vars.GRAD_NAMESPACE }}
+  BUSINESS_NAMESPACE: ${{ vars.GRAD_BUSINESS_NAMESPACE }}
 
   # 🖊️ EDIT to change the image registry settings.
   # Registries such as GHCR, Quay.io, and Docker Hub are supported.
@@ -19,7 +19,7 @@ env:
 
   SPRING_BOOT_IMAGE_NAME: educ-grad-trax-api-dc
   REPO_NAME: "educ-grad-trax-api"
-  APP_DOMAIN: ${{ secrets.APP_DOMAIN }}
+  APP_DOMAIN: ${{ vars.APP_DOMAIN }}
   BRANCH: "grad-release"
   TAG: "latest"
   MIN_CPU: "50m"
@@ -48,13 +48,8 @@ on:
 jobs:
   openshift-ci-cd:
     name: Build and deploy to OpenShift DEV from developer branch
-    # ubuntu-20.04 can also be used.
     runs-on: ubuntu-20.04
     environment: dev
-
-      #outputs:
-      #ROUTE: ${{ steps.deploy-and-expose.outputs.route }}
-    #SELECTOR: ${{ steps.deploy-and-expose.outputs.selector }}
 
     steps:
       - name: Check out repository
