--- a/.github/workflows/deploy_test.yml
+++ b/.github/workflows/deploy_test.yml
@@ -92,7 +92,10 @@ jobs:
           ${{ env.SOAM_KC_REALM_ID }} \
           ${{ secrets.CLIENT_ID }} \
           ${{ env.BRANCH }} \
-          ${{ env.REPO_NAME }}
+          ${{ env.REPO_NAME }} \
+          trax-client-secret \
+          TRAX_CLIENT_NAME \
+          TRAX_CLIENT_SECRET
           
           # Start rollout (if necessary) and follow it
           oc rollout latest dc/${{ env.SPRING_BOOT_IMAGE_NAME }} 2> /dev/null \
