--- a/api/src/test/resources/application.yaml
+++ b/api/src/test/resources/application.yaml
@@ -33,6 +33,22 @@ spring:
         jwt:
           issuer-uri: https://soam-dev.apps.silver.devops.gov.bc.ca/auth/realms/master
           jwk-set-uri: https://soam-dev.apps.silver.devops.gov.bc.ca/auth/realms/master/protocol/openid-connect/certs
+      client:
+        registration:
+          traxclient:
+            client-id: trax-client-name
+            client-secret: trax-client-secret
+            authorization-grant-type: client_credentials
+          institute-web-client:
+            client-id: edx-client-name
+            client-secret: edx-client-secret
+        provider:
+          traxclient:
+            issuer-uri: https://soam-dev.apps.silver.devops.gov.bc.ca/auth/realms/master
+            token-uri: https://soam-dev.apps.silver.devops.gov.bc.ca/auth/realms/master/protocol/openid-connect/token
+          institute-web-client:
+            issuer-uri: https://soam-dev.apps.silver.devops.gov.bc.ca/auth/realms/master
+            token-uri: https://soam-dev.apps.silver.devops.gov.bc.ca/auth/realms/master/protocol/openid-connect/token
   sql:
     init:
       data-locations: classpath:schema.sql
