--- a/api/pom.xml
+++ b/api/pom.xml
@@ -32,6 +32,7 @@
             src/main/java/ca/bc/gov/educ/api/trax/model/**,
             src/main/java/ca/bc/gov/educ/api/trax/util/**,
             src/main/java/ca/bc/gov/educ/api/trax/repository/**
+            src/main/java/ca/bc/gov/educ/api/trax/mapper/**
         </sonar.junit.exclusions>
         <java.version>18</java.version>
         <maven.compiler.version>3.10.1</maven.compiler.version>
