--- a/api/pom.xml
+++ b/api/pom.xml
@@ -24,14 +24,15 @@
             src/main/java/ca/bc/gov/educ/api/trax/model/**,
             src/main/java/ca/bc/gov/educ/api/trax/service/EventHandlerDelegatorService,
             src/main/java/ca/bc/gov/educ/api/trax/util/**,
-            src/main/java/ca/bc/gov/educ/api/trax/repository/**
+            src/main/java/ca/bc/gov/educ/api/trax/repository/**,
+            src/main/java/ca/bc/gov/educ/api/trax/mapper/**
         </sonar.exclusions>
         <sonar.junit.exclusions>
             src/main/java/ca/bc/gov/educ/api/trax/messaging/**,
             src/main/java/ca/bc/gov/educ/api/trax/scheduler/**,
             src/main/java/ca/bc/gov/educ/api/trax/model/**,
             src/main/java/ca/bc/gov/educ/api/trax/util/**,
-            src/main/java/ca/bc/gov/educ/api/trax/repository/**
+            src/main/java/ca/bc/gov/educ/api/trax/repository/**,
             src/main/java/ca/bc/gov/educ/api/trax/mapper/**
         </sonar.junit.exclusions>
         <java.version>18</java.version>
