--- a/api/pom.xml
+++ b/api/pom.xml
@@ -25,7 +25,8 @@
             src/main/java/ca/bc/gov/educ/api/trax/service/EventHandlerDelegatorService,
             src/main/java/ca/bc/gov/educ/api/trax/util/**,
             src/main/java/ca/bc/gov/educ/api/trax/repository/**,
-            src/main/java/ca/bc/gov/educ/api/trax/mapper/**
+            src/main/java/ca/bc/gov/educ/api/trax/mapper/**,
+            src/main/java/ca/bc/gov/educ/api/trax/filter/**
         </sonar.exclusions>
         <sonar.junit.exclusions>
             src/main/java/ca/bc/gov/educ/api/trax/messaging/**,
@@ -33,7 +34,8 @@
             src/main/java/ca/bc/gov/educ/api/trax/model/**,
             src/main/java/ca/bc/gov/educ/api/trax/util/**,
             src/main/java/ca/bc/gov/educ/api/trax/repository/**,
-            src/main/java/ca/bc/gov/educ/api/trax/mapper/**
+            src/main/java/ca/bc/gov/educ/api/trax/mapper/**,
+            src/main/java/ca/bc/gov/educ/api/trax/filter/**
         </sonar.junit.exclusions>
         <java.version>18</java.version>
         <maven.compiler.version>3.10.1</maven.compiler.version>
