--- a/api/src/test/resources/application.yaml
+++ b/api/src/test/resources/application.yaml
@@ -19,6 +19,8 @@ spring:
     hibernate:
       ddl-auto: create-drop
     generate-ddl: true
+  main:
+    allow-bean-definition-overriding: true
   mvc:
     log-request-details: true
   jackson:
