--- a/api/pom.xml
+++ b/api/pom.xml
@@ -39,12 +39,12 @@
         <maven.compiler.version>3.10.1</maven.compiler.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
-        <org.mapstruct.version>1.5.2.Final</org.mapstruct.version>
-        <springdoc.version>1.6.9</springdoc.version>
+        <org.mapstruct.version>1.6.3</org.mapstruct.version>
+        <springdoc.version>1.6.11</springdoc.version>
         <shedlock.version>4.39.0</shedlock.version>
         <nats.version>2.11.0</nats.version>
         <guava.version>33.4.0-jre</guava.version>
-        <log4j.version>2.18.0</log4j.version>
+        <log4j.version>2.24.3</log4j.version>
         <resilience4j.version>1.7.1</resilience4j.version>
     </properties>
 
